--- a/mbti/main.html
+++ b/mbti/main.html
@@ -45,28 +45,31 @@
         <div class="in">
                 <table id="table">
                     <tr>
-                        <td>ISTJ</td>
-                        <td>ISFJ</td>
-                        <td>INFJ</td>
-                        <td>INTJ</td>
+                        <td><a href="istj.html">ISTJ</a></td>
+                        <td><a href="isfj.html">ISFJ</a></td>
+                        <td><a href="infj.html">INFJ</a></td>
+                        <td><a href="intj.html">INTJ</a></td>
+                        
                     </tr>
                     <tr>
-                        <td>ISTP</td>
-                        <td>ISFP</td>
-                        <td>INFP</td>
-                        <td>INTP</td>
+                        <td><a href="istp.html">ISTP</a></td>
+                        <td><a href="isfp.html">ISFP</a></td>
+                        <td><a href="infp.html">INFP</a></td>
+                        <td><a href="intp.html">INTP</a></td>
                     </tr>
                     <tr>
                         <td><a href="estp.html">ESTP</a> </td>
-                        <td>ESFP</td>
-                        <td>ENFP</td>
-                        <td>ENTP</td>
+                        <td><a href="esfp.html">ESFP</a> </td>
+                        <td><a href="enfp.html">ENFP</a> </td>
+                        <td><a href="entp.html">ENTP</a> </td>
+
                     </tr>
                     <tr>
-                        <td>ESTJ</td>
-                        <td>ESFJ</td>
-                        <td>ENFJ</td>
-                        <td>ENTJ</td>
+                        <td><a href="estj.html">ESTJ</a> </td>
+                        <td><a href="esfj.html">ESFJ</a> </td>
+                        <td><a href="enfj.html">ENFJ</a> </td>
+                        <td><a href="entj.html">ENTJ</a> </td>
+
                     </tr>
 
                 </table>
