--- a/mbti/enfp.html
+++ b/mbti/enfp.html
@@ -4,66 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENFP</title>
-    <style>
-        body {
-            display: grid;
-            padding: 20px;
-            grid-template-rows: 110px 1fr;
-        }
-        #grid_body {
-            display: grid;
-            grid-template-columns: 200px 1fr;
-            border-top: 3px solid black;
-        }
-        #grid_main {
-            border-left:3px solid black;
-            display: grid;
-            grid-template-rows: 70px 350px 1fr;
-        }
-        #title a{ 
-            text-align: center;
-            color: black;
-            text-decoration: none;
-        }
-        #top {
-            margin-top: 10px;
-            padding: 10px;
-            font-size: 40px;
-            background-color:darkseagreen;
-        }
-        #mid {
-            display: grid;
-            grid-template-columns: 260px 1fr;
-        }
-        #mid #mid_in {
-            display: grid;
-            grid-template-rows: 2fr 30px 1fr;
-            font-size: 23px;
-        }
-        #bottom {
-            font-size: 20px;
-        }
-        #bottom p {
-            margin: 10px;
-           
-            letter-spacing: 1px;
-            line-height: 40px;
-            padding: 5px;
-        }
-        .title_b {
-            margin: 5px;
-            padding: 10px;
-            border-left: 3px solid darkseagreen;
-            border-bottom: 3px solid darkseagreen;
-            border-radius: 3px;
-        }
-        .block {
-            margin-left: 3px;
-            border-left: 10px solid darkseagreen;
-            padding-left: 10px;
-            margin: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="nf.css" type="text/css">    
 </head>
 <body>
     <div id="title"><a href="main.html"><h1 style="padding-top: 13px;">MBTI</h1></a></div>  
@@ -100,6 +41,7 @@
                 <p>다행히도 활동가형 사람은 언제 어떻게 휴식을 취해야 하는지 잘 알고 있습니다. 일할 때는 열정적이며 진취적인 모습이었다가 단숨에 무대 위 열성적으로 몸을 흔드는 자유로운 영혼의 모습으로 단숨에 변모하기도 하는 이들은 이러한 갑작스러운 변화로 종종 가까이에 있는 친구들이나 지인들을 놀라게 하기도 합니다. 이들의 다양한 성격적 면모는 다른 이들과의 정서적인 교감을 가능하게 하며, 특히나 친구 혹은 동료들에게 색다른 통찰력을 제공함으로써 영감을 불어 넣기도 합니다. 활동가형 사람은 모든 이들이 자신의 솔직한 감정에 귀 기울이고 이를 표현할 수 있는 시간이 필요하다고 믿습니다. 이러한 이유로 다양한 인간 감정이나 인간관계에 대한 내용이 이들과 대화 시 단골 소재입니다.</p>
                 <p>하지만 이런 활동가형 사람에게도 주의해야 할 사항이 있습니다. 만일 이들이 그들의 직관에 지나치게 의존한 나머지 사람들의 의도를 잘못 해석하는 경우 오해가 생겨 계획에 차질을 빚을 수 있는데, 이는 단도직입적으로 충분히 해결할 수 있는 문제를 더 어렵게 만드는 길입니다. 이러한 사회생활에서 빚어지는 스트레스는 협력과 조화를 중요시 여기는 성격의 사람들에게는 이들의 잠을 설치게 하는 근심 요소가 될 수 있습니다. 이들은 혹 실수로 누군가의 발을 밟았다 할 경우, 이들 역시 발을 밟힌 사람과 같은 고통을 느끼는 감성적이면서도 예민한 성격의 소유자입니다.</p>
                 <p>활동가형 사람은 인간관계나 사람의 감정, 혹은 생각과 관련하여 이들이 원하는 만족스러운 대답을 찾을 때까지 끊임없이 찾아 헤매고 다닐 것입니다. 그리고 진정 그들이 원하는 답을 찾는 그 날, 이들의 상상력이나 인간애, 그리고 용기는 어마어마한 빛을 발할 것입니다.
+
                 </p>
             </div>
 
