--- a/todolist/todo.html
+++ b/todolist/todo.html
@@ -12,6 +12,25 @@
             grid-template-columns: 1fr 2fr 1fr;
             font-size: 20px;
         }
+        @media(max-width:1500px) {
+            body {
+                grid-template-columns: 1fr 3fr 1fr;
+            }
+        }
+        @media(max-width:1000px) {
+            body { 
+                grid-template-columns: 1fr 4fr 1fr;
+            }
+        }
+        @media(max-width:800px) {
+            body {
+                display: block;
+                margin-left: 40px;
+                margin-right: 40px;
+            }
+        }
+
+
 
         #body {
             text-align: center;
@@ -48,8 +67,8 @@
 
         .modifyBt {
             float: right;
-           
-            
+
+
         }
 
         #task_list .deleteBt {
@@ -71,24 +90,24 @@
         <div id="list_box">
             <div id="complete_box">
                 <input type="button" value="All Check" id="allcheck">
-                <input type="button" value="All unCheck" id="alluncheck">
 
-                <input type="button" value="ALL" id="all">
-                <input type="button" value="COMPLETE" id="complete">
-                <input type="button" value="UNCOMPLETE" id="uncomplete">
+
+                <input type="button" value="ALL" id="all" disabled>
+                <input type="button" value="COMPLETE" id="complete" disabled>
+                <input type="button" value="UNCOMPLETE" id="uncomplete" disabled>
             </div>
 
             <div id="task_box">
                 <ul id="task_list">
                     <li class="task_uncheck">
                         <input type="checkbox" name="chk" class="chk">
-                        <span class="task_text">list1</span>
+                        <span class="task_text">Todo1</span>
                         <input type="button" value="modify" class="modifyBt">
                         <input type="button" value="X" class="deleteBt">
                     </li>
-                    <li class="task_uncheck" style="visibility: unset;">
+                    <li class="task_uncheck">
                         <input type="checkbox" name="chk" class="chk">
-                        <span class="task_text">list2</span>
+                        <span class="task_text">Todo2</span>
                         <input type="button" value="modify" class="modifyBt">
                         <input type="button" value="X" class="deleteBt">
                     </li>
@@ -101,7 +120,7 @@
                 let taskInput = document.getElementById('task_input');
                 /******************메뉴 버튼*********************/
                 let allCheckBt = document.getElementById('allcheck');
-                let allUnCheckBt = document.getElementById('alluncheck');
+
                 /******************리스트 버튼*******************/
                 let chk_check = document.getElementsByClassName("chk");
                 let delBt = document.getElementsByClassName('deleteBt');
@@ -129,24 +148,36 @@
                         }
                     })
                     //menu button event
-                    allCheckBt.addEventListener("click",allCheck);
-                    allUnCheckBt.addEventListener('click',allunCheck)
+                    allCheckBt.addEventListener("click", allCheck);
+
 
                     eventListenerAdd();
 
                 }
-                //체크박스를 모두 체크
+                //체크박스를 모두 체크 -> 모든 task 완료
                 function allCheck() {
-                    for(var i=0;i<chk_check.length;i++) {
-                        $(chk_check[i]).prop('checked',true);
+                    var count = 0;
+                    for (var i = 0; i < chk_check.length; i++) {
+                        var temp = chk_check[i].parentNode.className;
+                        if (temp == "task_check")
+                            count++;
+                    }
+                    if (count == chk_check.length) {
+
+                        for (var i = 0; i < chk_check.length; i++) {
+                            $(chk_check[i]).prop('checked', false);
+                            chk_check[i].parentNode.className = "task_uncheck";
+                        }
+                    }
+                    else {
+
+                        for (var i = 0; i < chk_check.length; i++) {
+                            $(chk_check[i]).prop('checked', true);
+                            chk_check[i].parentNode.className = "task_check";
+                        }
                     }
                 }
-                //체크박스를 모두 해제
-                function allunCheck() {
-                    for(var i=0;i<chk_check.length;i++) {
-                        $(chk_check[i]).prop('checked',false);
-                    }
-                }
+
                 //수정 버튼을 클릭시 실행되는 함수 
                 function modifyTask(event) {
                     var changeTask = prompt('수정할 task를 입력하세요 ', "task");
